register user,add products

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,12 +2,16 @@
 @import "../src/assets/sass/nav.scss";
 @import "../src/assets/sass/homePage.scss";
 @import "../src/assets/sass/register.scss";
+@import "../src/assets/sass/contactPage.scss";
 
+// 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+
 
 body {
     font-size: 18px;
