new routes,new pages,new components

--- a/frontend/src/assets/sass/homePage.scss
+++ b/frontend/src/assets/sass/homePage.scss
@@ -4,31 +4,31 @@
 .homePageComponent{
     width: 100%;
     height: 100vh;
-    background:linear-gradient(rgba(245, 241, 241, 0.3),
-    rgba(248, 245, 245, 0.6)), url('../images/background.jpg');
-    @include flex(flex,center,center,row,100px,wrap);
+    @include flex(flex,space-between,center,row,0px,wrap);
+    background: url('../images/background.jpg');
+    background-size: cover;
     background-attachment: fixed;
     .contentWrapper{
-        width: 40%;
+        max-width: 40%;
+        padding: 0 50px;
         h1 {
-            font-size: 80px;
-            line-height:80px;
+            font-size: 50px;
             color: $homeTextColor;
-            padding-bottom: 50px;
+            padding-bottom: 30px;
         }
         p {
-            color: $homeTextColor;
+            color: rgb(51, 50, 50);
             font-size: 20px;
-            padding-bottom: 30px;
+            padding-bottom: 50px;
             font-weight: 500;
         }
         .homeBtn {
             padding: 10px 35px;
-            background: $white;
+            background: rgb(51, 50, 50);;
             border-radius: 30px;
             font-weight: 500;
             transition: all 0.5s ease;
-            color: $textColor;
+            color: $white;
             &:hover{
                 background: $homeTextColor;
                 color: $white;
