--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -3,6 +3,8 @@
 @import "../src/assets/sass/homePage.scss";
 @import "../src/assets/sass/register.scss";
 @import "../src/assets/sass/contactPage.scss";
+@import "../src/assets/sass/aboutComponent.scss";
+@import "../src/assets/sass/topProducts.scss";
 
 // 
 *{
