--- a/frontend/src/assets/sass/aboutComponent.scss
+++ b/frontend/src/assets/sass/aboutComponent.scss
@@ -7,8 +7,17 @@ padding: 100px 50px;
 background: $aboutBck;
 @include flex(flex,space-between,center,row,0px,wrap);
 color: $white;
+@media screen and (max-width: 900px){
+    @include flex(flex,space-between,center,column,30px,wrap);
+}
+@media screen and (max-width: 790px){
+    padding: 20px 30px;
+}
 .content {
     max-width: 30%;
+    @media screen and (max-width: 900px){
+        max-width: 100%;
+    }
     h2{
         font-size: 35px;
         padding-bottom: 20px;
@@ -22,12 +31,23 @@ color: $white;
     max-width: 60%;
     display: flex;
     justify-content: center;
+    @media screen and (max-width: 900px){
+        max-width: 100%;
+    }
+    @media screen and (max-width: 790px){
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
     .category {
         max-width: 45%;
         display: flex;
         flex-direction: column;
         align-items: center; 
         margin: 0 20px;
+        @media screen and (max-width: 790px){
+            max-width: 100%;
+        }
         h3 {
             margin: 20px 0;
             font-size: 27px;
