--- a/frontend/src/assets/sass/nav.scss
+++ b/frontend/src/assets/sass/nav.scss
@@ -13,6 +13,12 @@
     @include flex(flex,space-between,center,row,0px,wrap);
     width:100%;
     padding:0 50px;
+    @media screen and (max-width: 790px){
+      padding: 0 30px;
+  }
+  @media screen and (max-width: 390px){
+      padding: 0 10px;
+  }
     
     .menu{    
       .bars {
