--- a/frontend/src/assets/sass/topProducts.scss
+++ b/frontend/src/assets/sass/topProducts.scss
@@ -16,25 +16,43 @@
 .topProducts{
     width: 100%;
     @include flex(flex,center,center,row,20px,wrap);
+
     .product {
         width: 25%;
-        padding: 10px;
+        padding: 10px 20px;
         text-align: center;
         background: rgb(51, 50, 50);
         border-radius: 10px;
-        h3,h4 {
-            color: $white;
-            padding-bottom: 20px;
+        @media screen and (max-width: 1160px) {
+            width: 40%;
+        }
+        @media screen and (max-width: 850px) {
+            width: 80%;
+        }
+        .productLink {
+            display:inline-block;
+            width: 100%;
+            h3 {
+                color: $white;
+                padding-bottom: 20px;
+            }
+            img {
+                width: 250px;
+                height: 250px;
+                object-fit: cover;
+                border-radius: 5px;
+                @media screen and (max-width: 850px) {
+                    width: 350px;
+                    height: 350px;
+                }
+            }
         }
         h4 {
+            color: $white;
+            padding-bottom: 20px;
             font-size: 20px;
         }
-        img {
-            width: 250px;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 5px;
-        }
+
         button {
             padding: 10px 35px;
             background: $homeTextColor;
