--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,28 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap");
 @import "../src/assets/sass/nav.scss";
 @import "../src/assets/sass/homePage.scss";
 @import "../src/assets/sass/register.scss";
 @import "../src/assets/sass/contactPage.scss";
 @import "../src/assets/sass/aboutComponent.scss";
 @import "../src/assets/sass/topProducts.scss";
+@import "../src/assets/sass/iceCream.scss";
 
-// 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+//
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-
 
 body {
-    font-size: 18px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
 }
 .linkReset {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
-
-
