--- a/frontend/src/assets/sass/iceCream.scss
+++ b/frontend/src/assets/sass/iceCream.scss
@@ -5,10 +5,12 @@
   max-width: 100%;
   min-height: 100%;
   background-attachment: fixed;
+
   .wrapper {
-    background: $bodyBck;
     width: 100%;
     height: 100%;
+    background: $bodyBck;
+    padding: 100px 0;
     .img {
       z-index: 3;
       position: absolute;
@@ -33,10 +35,6 @@
       top: 10%;
       z-index: 5;
       right: 28%;
-      @media screen and (max-width: 2000px) {
-      }
-      @media screen and (max-width: 2000px) {
-      }
       .white {
         background: #fff;
         width: 400px;
