styling login and contact component

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -6,6 +6,7 @@
 @import "../src/assets/sass/aboutComponent.scss";
 @import "../src/assets/sass/topProducts.scss";
 @import "../src/assets/sass/iceCream.scss";
+@import "../src/assets/sass/loginPage.scss";
 
 //
 * {
