--- a/frontend/src/assets/sass/contactPage.scss
+++ b/frontend/src/assets/sass/contactPage.scss
@@ -1,69 +1,82 @@
 @import "./setup/theme.scss";
 
-.wrapper{
-    width:100%;
-    height:100%;
-    padding: 50px;
-    @include flex(flex,center,center,column,20px,wrap);
-    background: $baseRose;
-    h2{
-        text-transform: uppercase;
-        text-align: center;
-        color: $homeTextColor;
+.contact-wrapper {
+  width: 100%;
+  min-height: 100vh;
+  @include flex(flex, center, center, row, 0px, wrap);
+  background: $bodyBck;
+  .contact-box {
+    @include flex(flex, space-between, center, row, 0px, wrap);
+    width: 100%;
+    height: 100%;
+    @media screen and (max-width: 1200px) {
+      flex-direction: column;
+      justify-content: center;
+      gap: 20px;
     }
-    p{
-        text-align: center;
-        .icon {
-            fill: $homeTextColor;
-        }
+    .content {
+      width: 45%;
+      height: 100vh;
+      background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+        url("../images/contactUs.avif");
+      background-repeat: no-repeat;
+      background-size: cover;
+      @include flex(flex, center, center, column, 10px, wrap);
+      color: $white;
+      padding: 20px;
+      @media screen and (max-width: 1200px) {
+        width: 100%;
+      }
+      h2 {
+        padding-bottom: 20px;
+        font-size: 30px;
+      }
+      p {
+        line-height: 2rem;
+      }
+      h3 {
+        font-size: 25px;
+        line-height: 2.5rem;
+        color: $baseRose;
+      }
     }
-    .row{
-        @include flex(flex,center,center,column,10px,wrap);
-        padding: 20px 0;
+    .row {
+      background: $dark;
+      width: 600px;
+      padding: 40px;
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
+      margin-right: 50px;
+      @media screen and (max-width: 1200px) {
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
+      @media screen and (max-width: 620px) {
+        width: 400px;
+      }
+      @media screen and (max-width: 400px) {
+        width: 300px;
+      }
+      .user-box {
+        position: relative;
         input {
-            width: 400px;
-            height: 40px;
-            padding: 0 20px;
-            font-size: 18px;
-            border-radius: 5px;
-            border: 3px solid $white;
-            background: transparent;
-            color: #000;
-            &:focus{
-                outline: none;
-            }
+          @include input;
         }
-        p{
-            color: red;
+
+        label {
+          @include label;
         }
         textarea {
-            width: 400px;
-            height: 120px;
-            padding: 0 20px;
-            font-size: 18px;
-            border-radius: 5px;
-            border: 3px solid $white;
-            background: transparent;
-            color: #000;
-            resize: none;
-            font-family: 'Poppins', sans-serif;
-            &:focus{
-                outline: none;
-            }
+          @include textarea;
         }
-    }
-    button {
-        width: 200px;
-        height: 40px;
-        border-radius: 50px;
-        border: none;
-        cursor: pointer;
-        background: $homeTextColor;
-        font-size: 18px;
-        font-weight: 400;
-        color: $white;
-        &:hover {
-            background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+        p {
+          margin: 10px;
+          color: $homeTextColor;
         }
+      }
+      button {
+        @include button;
+      }
     }
+  }
 }
