--- a/frontend/src/assets/sass/nav.scss
+++ b/frontend/src/assets/sass/nav.scss
@@ -1,82 +1,93 @@
 @import "./setup/theme.scss";
 
-  .container{
-    position:sticky;
-    width:100%;
-    top: 0;
-    @include flex(flex,space-between,center,column,0px,wrap);
-    z-index: 9;
-    background: $white;
+.container {
+  position: sticky;
+  width: 100%;
+  top: 0;
+  @include flex(flex, space-between, center, column, 0px, wrap);
+  z-index: 9;
+  background: $white;
+}
+
+header {
+  @include flex(flex, space-between, center, row, 0px, wrap);
+  width: 100%;
+  padding: 0 50px;
+
+  @media screen and (max-width: 790px) {
+    padding: 0 30px;
+  }
+  @media screen and (max-width: 390px) {
+    padding: 0 10px;
   }
 
-  header{
-    @include flex(flex,space-between,center,row,0px,wrap);
-    width:100%;
-    padding:0 50px;
-    @media screen and (max-width: 790px){
-      padding: 0 30px;
-  }
-  @media screen and (max-width: 390px){
-      padding: 0 10px;
-  }
-    
-    .menu{    
-      .bars {
-        width:35px;
-        height:35px;
-        cursor:pointer;
-        transition: all 0.5s ease;
-        &:hover {
-            fill: $homeTextColor;
-        }
+  .right {
+    @include flex(flex, space-between, center, row, 20px, wrap);
+    .cart {
+      width: 35px;
+      height: 35px;
+      fill: $dark;
+      transition: all 0.5s ease;
+      &:hover {
+        fill: $homeTextColor;
       }
     }
-    .logo {
-        img {
-            width:95px;
-            height:95px;
-        }
-    }
-  }
-  .menu_container{
-    position:absolute;
-    width:100%;
-    height:100%;
-    background-color:#000;
-    color:#fff;
-    padding: 50px 0;;
-    @include flex(flex,center,center,column,0px,wrap);
-    li{
-      display:inline-flex;
-      color:#fff;
-      text-decoration: none;
-      height:80px;
-      overflow: hidden;
-      font-size:25px;
-      .cart {
+    .menu {
+      .bars {
+        fill: $dark;
         width: 35px;
         height: 35px;
+        cursor: pointer;
+        transition: all 0.5s ease;
+        &:hover {
+          fill: $homeTextColor;
+        }
       }
-      &:hover {
-        color: $homeTextColor;
-      }
-      @media(max-width:768px){
-        font-size:22px;
-      }
-    }
-  
-    .btn_close{
-      @include flex(flex,center,center,column,0px,wrap);
-      width:35px;
-      height:35px;
-      background-color:#fff;
-      color:#000;
-      border-radius: 58px;
-      position:absolute;
-      top:20px;
-      right:20px;
-      z-index:2;
-      cursor:pointer;
-      font-size:18px;
     }
   }
+  .logo {
+    img {
+      width: 95px;
+      height: 95px;
+    }
+  }
+}
+.menu_container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  color: #fff;
+  padding: 50px 0;
+  @include flex(flex, center, center, column, 0px, wrap);
+  li {
+    display: inline-flex;
+    color: #fff;
+    text-decoration: none;
+    height: 80px;
+    overflow: hidden;
+    font-size: 25px;
+
+    &:hover {
+      color: $homeTextColor;
+    }
+    @media (max-width: 768px) {
+      font-size: 22px;
+    }
+  }
+
+  .btn_close {
+    @include flex(flex, center, center, column, 0px, wrap);
+    width: 35px;
+    height: 35px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 58px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 2;
+    cursor: pointer;
+    font-size: 18px;
+  }
+}
