--- a/frontend/src/assets/sass/loginPage.scss
+++ b/frontend/src/assets/sass/loginPage.scss
@@ -39,7 +39,7 @@
       .login {
         transition: all 0.5s ease;
         &:hover {
-          color: #a5a3a3;
+          color: $homeTextColor;
         }
       }
     }
