--- a/frontend/src/assets/sass/register.scss
+++ b/frontend/src/assets/sass/register.scss
@@ -1,38 +1,56 @@
 @import "./setup/theme.scss";
 
-.inputWrapper{
-    width:100%;
-    padding: 30px 50px;
-    @include flex(flex,center,center,column,30px,wrap);
-    background: linear-gradient(90deg, rgba(215,228,246,1) 35%, rgba(254,216,223,1) 100%);
-    h2{
-        color: $homeTextColor;
-    }
-    input {
-        width: 300px;
-        height: 40px;
-        padding: 0 20px;
-        font-size: 18px;
-        border-radius: 5px;
-        border: 3px solid $white;
-        background: transparent;
-        color: $textColor;
-        &:focus{
-            outline: none;
-        }
-    }
-    button {
-        width: 200px;
-        height: 40px;
-        border-radius: 50px;
-        border: none;
-        cursor: pointer;
-        background: $homeTextColor;
-        font-size: 18px;
-        font-weight: 400;
-        color: $white;
+.registerWrapper {
+  width: 100%;
+  height: 100vh;
+  @include flex(flex, center, center, column, 10px, wrap);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../images/registerBck2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  .register-box {
+    width: 600px;
+    padding: 40px;
+    background: rgba(51, 50, 50, 0.7);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    p {
+      margin: 20px 0;
+      padding: 0;
+      color: #fff;
+      text-align: center;
+      font-size: 15px;
+      letter-spacing: 1px;
+      .register {
+        transition: all 0.5s ease;
         &:hover {
-            background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+          color: $homeTextColor;
         }
+      }
     }
+    .registerBtn {
+      @include button;
+    }
+    @media screen and (max-width: 610px) {
+      width: 500px;
+    }
+    @media screen and (max-width: 500px) {
+      width: 400px;
+    }
+    @media screen and (max-width: 410px) {
+      width: 350px;
+    }
+    .user-box {
+      position: relative;
+      input {
+        @include input;
+      }
+
+      label {
+        @include label;
+      }
+    }
+  }
 }
