--- a/frontend/src/assets/sass/setup/theme.scss
+++ b/frontend/src/assets/sass/setup/theme.scss
@@ -139,3 +139,80 @@ li {
     font-size: 12px;
   }
 }
+
+@mixin Btn {
+  padding: 15px 30px;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  font-size: 20px;
+  z-index: 1;
+  position: relative;
+  -webkit-box-shadow: 0 5px 15px rgba(33, 33, 33, 0.2);
+  box-shadow: 0 5px 15px rgba(33, 33, 33, 0.2);
+  overflow: hidden;
+  font-weight: 700;
+  @media screen and (max-width: 1000px) {
+    color: $white;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    background-color: $dark;
+    z-index: -1;
+    overflow: hidden;
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: right;
+    -ms-transform-origin: right;
+    transform-origin: right;
+    -webkit-transition: -webkit-transform 0.2s ease-in;
+    transition: -webkit-transform 0.2s ease-in;
+    transition: transform 0.2s ease-in;
+  }
+  &:hover {
+    color: #e8e8e8;
+  }
+  &:hover::before {
+    -webkit-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    transform: scaleX(1);
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+  }
+}
+
+@mixin links {
+  width: 100%;
+  font-size: 25px;
+  color: white;
+  font-weight: 700;
+  position: relative;
+  transition: all 0.5s;
+  z-index: 1;
+  margin: 20px 0;
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -10px;
+    width: 5px;
+    height: 100%;
+    background-color: $dark;
+    z-index: -1;
+    transition: all 0.5s;
+  }
+  &:hover::before {
+    width: 100%;
+  }
+  &:active::before {
+    background: #b9b9b9;
+  }
+}
