--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -7,6 +7,7 @@
 @import "../src/assets/sass/topProducts.scss";
 @import "../src/assets/sass/iceCream.scss";
 @import "../src/assets/sass/loginPage.scss";
+@import "../src/assets/sass/footerComponent.scss";
 
 //
 * {
