--- a/frontend/src/assets/sass/iceCream.scss
+++ b/frontend/src/assets/sass/iceCream.scss
@@ -1,84 +1,11 @@
 @import "./setup/theme.scss";
 
 .iceCreamContainer {
-  position: relative;
-  max-width: 100%;
-  min-height: 100%;
-  background-attachment: fixed;
-
-  .wrapper {
-    width: 100%;
-    height: 100%;
-    background: $bodyBck;
-    padding: 100px 0;
-    .img {
-      z-index: 3;
-      position: absolute;
-      left: 33%;
-      right: 0;
-      img {
-        width: 400px;
-        // @media screen and (max-width: 2000px) {
-        //   width: 100%;
-        // }
-      }
-    }
-    .purple {
-      z-index: 1;
-      right: 500px;
-      background: $aboutBck;
-      width: 200px;
-      height: 700px;
-    }
-    .content {
-      position: absolute;
-      top: 10%;
-      z-index: 5;
-      right: 28%;
-      .white {
-        background: #fff;
-        width: 400px;
-        height: 300px;
-        padding: 20px;
-        text-align: center;
-        margin-bottom: 100px;
-        @media screen and (max-width: 360px) {
-          width: 200px;
-          height: 100%;
-          padding: 10px;
-        }
-        h3 {
-          font-size: 28px;
-        }
-      }
-      .pink {
-        background: #c71e38;
-        color: #fff;
-        width: 300px;
-        height: 230px;
-        text-align: center;
-        padding: 20px;
-        @media screen and (max-width: 360px) {
-          width: 200px;
-          padding: 10px;
-        }
-        h3 {
-          font-size: 28px;
-          text-transform: uppercase;
-          padding-bottom: 10px;
-          font-weight: 300;
-        }
-        p {
-          margin-bottom: 20px;
-        }
-        .iceCreamLink {
-          background: transparent;
-          text-decoration: none;
-          color: #fff;
-          padding: 10px 25px;
-          border: 3px solid #fff;
-        }
-      }
-    }
-  }
+  width: 100%;
+  height: 100vh;
+  margin: 30px 0;
+  background: url("../images/deliveryBck.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
