--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap");
 @import "../src/assets/sass/nav.scss";
 @import "../src/assets/sass/homePage.scss";
 @import "../src/assets/sass/register.scss";
