--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -9,6 +9,7 @@
 @import "../src/assets/sass/iceCream.scss";
 @import "../src/assets/sass/loginPage.scss";
 @import "../src/assets/sass/footerComponent.scss";
+@import "../src/assets/sass/slider.scss";
 
 //
 * {
