added functionality for sending mail to activate account

--- a/frontend/src/assets/sass/register.scss
+++ b/frontend/src/assets/sass/register.scss
@@ -54,3 +54,11 @@
     }
   }
 }
+
+.actvationPage {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  @include flex(flex, center, center, column, 10px, wrap);
+  background: $bodyBck;
+}
