filter by category

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -10,6 +10,7 @@
 @import "../src/assets/sass/loginPage.scss";
 @import "../src/assets/sass/footerComponent.scss";
 @import "../src/assets/sass/slider.scss";
+@import "../src/assets/sass/CategoryShop.scss";
 
 //
 * {
