--- a/frontend/src/assets/sass/CategoryShop.scss
+++ b/frontend/src/assets/sass/CategoryShop.scss
@@ -1,47 +1,64 @@
 @import "./setup/theme.scss";
 
-//
-
-.categoryWrapper {
+.categoryContainer {
   width: 100%;
-  min-height: 100vh;
-  padding: 20px 50px;
-  @include flex(flex, space-between, flex-start, row, 20px, wrap);
+  height: 100%;
   background: $aboutBck;
-  .productContainer {
-    width: 250px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 20px;
-    background: $dark;
+  h2 {
+    text-align: center;
+    padding: 20px 0;
     color: $white;
-    transition: all 0.5s ease-in-out;
-    box-shadow: 10px 10px 5px 0px rgba(231, 219, 219, 0.75);
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(231, 219, 219, 0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(231, 219, 219, 0.75);
-    .productDetailsLink {
-      @include flex(flex, space-between, center, column, 10px, wrap);
-      p {
-        color: $homeTextColor;
-        font-size: 20px;
-        font-weight: 700;
-      }
-      img {
-        width: 250px;
-        height: 250px;
-        object-fit: cover;
-      }
-      button {
-        @include button;
-        margin-bottom: 10px;
-        font-size: 15px;
-        letter-spacing: 1px;
-        margin-top: 10px;
-        text-transform: capitalize;
-      }
+    font-size: 55px;
+    font-family: "Caveat", cursive;
+  }
+  .categoryWrapper {
+    width: 100%;
+    height: 100%;
+    padding: 20px 50px;
+    @include flex(flex, space-between, flex-start, row, 20px, wrap);
+    @media screen and (max-width: 720px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
-    &:hover {
-      scale: 0.9;
+    @media screen and (max-width: 400px) {
+      padding: 20px 0;
+    }
+    .productContainer {
+      width: 300px;
+      position: relative;
+      overflow: hidden;
+      border-radius: 20px;
+      background: $dark;
+      color: $white;
+      transition: all 0.5s ease-in-out;
+      box-shadow: 10px 10px 5px 0px rgba(231, 219, 219, 0.75);
+      -webkit-box-shadow: 10px 10px 5px 0px rgba(231, 219, 219, 0.75);
+      -moz-box-shadow: 10px 10px 5px 0px rgba(231, 219, 219, 0.75);
+      .productDetailsLink {
+        @include flex(flex, space-between, center, column, 10px, wrap);
+        p {
+          color: $homeTextColor;
+          font-size: 20px;
+          font-weight: 700;
+        }
+        img {
+          width: 300px;
+          height: 300px;
+          object-fit: cover;
+        }
+        button {
+          @include button;
+          margin-bottom: 10px;
+          font-size: 15px;
+          letter-spacing: 1px;
+          margin-top: 10px;
+          text-transform: capitalize;
+        }
+      }
+      &:hover {
+        scale: 0.9;
+      }
     }
   }
 }
