--- a/frontend/src/assets/sass/aboutComponent.scss
+++ b/frontend/src/assets/sass/aboutComponent.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   padding: 100px 50px;
-  background: $aboutBck;
+  background: $homeTextColor;
   @include flex(flex, space-between, center, row, 0px, wrap);
   color: $white;
   @media screen and (max-width: 900px) {
