--- a/frontend/src/assets/sass/nav.scss
+++ b/frontend/src/assets/sass/nav.scss
@@ -47,8 +47,9 @@ header {
   }
   .logo {
     img {
-      width: 95px;
-      height: 95px;
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
     }
   }
 }
