--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,6 +11,7 @@
 @import "../src/assets/sass/slider.scss";
 @import "../src/assets/sass/CategoryShop.scss";
 @import "../src/assets/sass/productDetails.scss";
+@import "../src/assets/sass/cart.scss";
 
 //
 * {
