--- a/frontend/src/assets/sass/cart.scss
+++ b/frontend/src/assets/sass/cart.scss
@@ -20,6 +20,11 @@
       object-fit: cover;
     }
     .content {
+      h3 {
+        @media screen and (max-width: 370px) {
+          font-size: 15px;
+        }
+      }
       p {
         text-align: center;
       }
@@ -48,6 +53,9 @@
   .btnCheckout {
     @include Btn;
     margin: 20px 0;
+    @media screen and (max-width: 1000px) {
+      color: $dark;
+    }
   }
   .totalPrice {
     margin-top: 10px;
