--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -12,6 +12,8 @@
 @import "../src/assets/sass/CategoryShop.scss";
 @import "../src/assets/sass/productDetails.scss";
 @import "../src/assets/sass/cart.scss";
+@import "../src/assets/sass/checkout.scss";
+@import "../src/assets/sass/order.scss";
 
 //
 * {
