--- a/frontend/src/assets/sass/order.scss
+++ b/frontend/src/assets/sass/order.scss
@@ -3,19 +3,62 @@
 .orderWrapper {
   width: 100%;
   min-height: 100vh;
-  @include flex(flex, center, center, row, 0px, wrap);
-  background: $bodyBck;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("../images/order.avif");
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  .content {
+    padding: 50px;
+    width: 50%;
+    text-align: center;
+    background: rgba(189, 187, 187, 0.23);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    p {
+      font-weight: 400;
+    }
+    -webkit-backdrop-filter: blur(5px);
+    @media screen and (max-width: 1000px) {
+      width: 70%;
+    }
+    @media screen and (max-width: 500px) {
+      width: 90%;
+    }
+  }
 }
-.paymentContainer {
+
+.paymentWrapper {
   width: 100%;
   min-height: 100vh;
-  background: $bodyBck;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("../images/ckeckout.png");
   @include flex(flex, center, center, column, 0px, wrap);
-  .StripeElement {
+  .paymentContainer {
     width: 50%;
-  }
-  button {
-    margin-top: 30px;
-    @include Btn;
+    background: rgba(189, 187, 187, 0.23);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    padding: 40px;
+    @media screen and (max-width: 1000px) {
+      width: 70%;
+    }
+    @media screen and (max-width: 500px) {
+      width: 90%;
+    }
+    button {
+      margin-top: 30px;
+      @include Btn;
+      @media screen and (max-width: 1000px) {
+        color: #333232;
+      }
+    }
   }
 }
