--- a/frontend/src/assets/sass/contactPage.scss
+++ b/frontend/src/assets/sass/contactPage.scss
@@ -70,8 +70,12 @@
           @include textarea;
         }
         p {
-          margin: 10px;
-          color: $homeTextColor;
+          margin: 20px 0;
+          padding: 0;
+          color: #fff;
+          text-align: center;
+          font-size: 15px;
+          letter-spacing: 1px;
         }
       }
       button {
