--- a/frontend/src/assets/sass/nav.scss
+++ b/frontend/src/assets/sass/nav.scss
@@ -23,6 +23,69 @@ header {
 
   .right {
     @include flex(flex, space-between, center, row, 30px, wrap);
+
+    .input-search {
+      position: relative;
+      display: inline-block;
+      height: 30px;
+      width: 30px;
+      transition: width 0.5s;
+      // margin: 0 50px;
+
+      input[type="text"] {
+        height: 100%;
+        width: 3rem;
+        border: none;
+        background-color: transparent;
+        outline: none;
+        font-size: 1.2rem;
+        padding: 0 1rem;
+        transition: width 0.5s;
+      }
+
+      .search-icon {
+        position: absolute;
+        top: 50%;
+        right: 0.5rem;
+        transform: translateY(-50%);
+        font-size: 30px;
+        color: $dark;
+        transition: all 0.5s;
+      }
+
+      &.expanded {
+        width: 20rem;
+
+        input[type="text"] {
+          width: 100%;
+          border-bottom: 2px solid $dark;
+        }
+
+        .search-icon {
+          right: calc(100% - 10px);
+          font-size: 1rem;
+          color: $white;
+        }
+      }
+    }
+
+    .searchBtn {
+      padding: 10px 25px;
+      border: none;
+      outline: none;
+      border-radius: 5px;
+      font-size: 18px;
+      background: $dark;
+      color: $white;
+      transition: all 0.5s ease;
+      cursor: pointer;
+      margin-top: -10px;
+      &:hover {
+        color: $dark;
+        background: $white;
+      }
+    }
+
     .cartCounter {
       position: relative;
       .counter {
