--- a/frontend/src/assets/sass/register.scss
+++ b/frontend/src/assets/sass/register.scss
@@ -2,7 +2,7 @@
 
 .registerWrapper {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   @include flex(flex, center, center, column, 10px, wrap);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../images/registerBck2.jpg");
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  padding: 20px 0;
   .register-box {
     width: 600px;
     padding: 40px;
